# yoto-maker

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/chat/: decisions.md
src/yoto_maker/: catalog.py  cli.py  download.py
